Fix Safari horizontal overflow (#650)

--- a/src/styles/bottom-navbar.css
+++ b/src/styles/bottom-navbar.css
@@ -5,7 +5,6 @@
   z-index: 100;
   min-height: max(7vh, 12px);
   display: inline-flex;
-  min-width: 100vw;
   background-color: var(--color-secondary); /* Buttons, highlights */
   text-align: center;
   align-items: center;
